--- a/app/src/main/res/layout/activity_task_two.xml
+++ b/app/src/main/res/layout/activity_task_two.xml
@@ -4,10 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#97CAB2"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    tools:ignore="HardcodedText">
+    android:background="#97CAB2"
+    tools:context=".TaskTwo">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/profileToolbar"
@@ -29,13 +28,17 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:text="Task 1"
+            android:text="Task 2"
             android:textColor="@color/white"
             android:textSize="26sp"
             android:textStyle="normal" />
 
     </androidx.appcompat.widget.Toolbar>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/lightGrey" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,12 +47,14 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" />
+            android:layout_height="wrap_content" />
+
 
 
     </LinearLayout>
+
 
 
 </LinearLayout>
