--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/my_drawer_layout"
     android:layout_width="match_parent"
+    android:background="@color/teal_700"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
     tools:ignore="HardcodedText">
@@ -28,7 +29,7 @@
             android:layout_width="160dp"
             android:layout_height="160dp"
             android:layout_gravity="center"
-            android:layout_margin="20dp"
+            android:layout_margin="18dp"
             android:layout_weight="1"
             android:backgroundTint="#67CAAB"
             android:elevation="4dp"
@@ -40,7 +41,7 @@
                 android:layout_gravity="center"
                 android:text="TASK 1"
                 android:textColor="@color/white"
-                android:textSize="42sp"
+                android:textSize="40sp"
                 android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
@@ -49,7 +50,7 @@
             android:id="@+id/task2"
             android:layout_width="160dp"
             android:layout_height="160dp"
-            android:layout_margin="20dp"
+            android:layout_margin="18dp"
             android:layout_weight="1"
             android:backgroundTint="#67CAAB"
             android:elevation="4dp"
@@ -62,7 +63,7 @@
                 android:layout_gravity="center"
                 android:text="TASK 2"
                 android:textColor="@color/white"
-                android:textSize="42sp"
+                android:textSize="40sp"
                 android:textStyle="bold" />
         </androidx.cardview.widget.CardView>
 
@@ -76,6 +77,7 @@
         android:layout_weight="1"/>
 
     <LinearLayout
+        android:id="@+id/tips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#52C4C5D5"
@@ -108,6 +110,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
+    android:background="@color/teal_700"
     app:menu="@menu/menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
