--- a/app/src/main/res/layout/activity_question_image.xml
+++ b/app/src/main/res/layout/activity_question_image.xml
@@ -12,21 +12,27 @@
         android:id="@+id/textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/image_downloading"
         android:textColor="@color/white"
         android:textSize="22sp" />
 
+    <Button
+        android:id="@+id/download_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:backgroundTint="@color/teal_700"
+        android:text="Download image"
+        android:textColor="@color/white" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-
-
-        />
+        android:layout_gravity="center" />
 
 
 </LinearLayout>
