--- a/app/src/main/res/layout/recyclerview1_item.xml
+++ b/app/src/main/res/layout/recyclerview1_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
-    android:background="#C6E3BE"
+    android:background="#A3D3B9"
     android:orientation="vertical">
 
     <LinearLayout
