--- a/app/src/main/res/layout/activity_question_image.xml
+++ b/app/src/main/res/layout/activity_question_image.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#97CAB2"
     android:orientation="vertical"
-    tools:context=".QuestionImage">
+    tools:context=".ui.QuestionImage">
 
     <TextView
         android:id="@+id/textview"
