--- a/app/src/main/res/layout/recyclerview2_item.xml
+++ b/app/src/main/res/layout/recyclerview2_item.xml
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
                 android:text="IDP"
-                android:textColor="@color/teal_700"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <TextView
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="10dp"
                 android:text="12.10.2023"
-                android:textColor="@color/teal_700"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
         </LinearLayout>
 
