--- a/app/src/main/res/layout/activity_task_two.xml
+++ b/app/src/main/res/layout/activity_task_two.xml
@@ -48,8 +48,8 @@
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="1dp" />
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="10dp" />
 
 
     </LinearLayout>
